--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
-  "homepage": "https:\/\/username.github.io/app-toot-name",
+  "homepage": "https:\/\/fabiojuvenalpereira.github.io/recipe-app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
