--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "recipes-app",
   "version": "0.1.0",
+  "homepage": "https:\/\/fabiojuvenalpereira.github.io/RecipesApp",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -17,7 +18,6 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
-  "homepage": "https:\/\/fabiojuvenalpereira.github.io/RecipeSApp",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
